--- a/styles/style.css
+++ b/styles/style.css
@@ -412,8 +412,6 @@ figcaption {
 aside {
   margin: 1.5em;
   max-width: 50em;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .rally-end {
@@ -576,6 +574,11 @@ footer a {
   }
 
   /*----------------------------------detail page------------------------------------ */
+  aside {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
   .more-by-rally {
     flex-direction: row;
     gap: 2em;
